@@ -69,7 +69,10 @@ $(ASSEMBLY): $(FILES) $(build_resources)
 	$(CSC) $(CSC_FLAGS) $(REFS) $(build_resources:%=/resource:%) $(build_sources) -out:$@ -target:library
 
 assemblydir = $(MD_ADDIN_DIR)/MonoDevelop.XmlEditor
-assembly_DATA = $(ASSEMBLY) $(DATA_FILES)
+assembly_DATA = $(ASSEMBLY)
+
+schemadir = $(MD_ADDIN_DIR)/MonoDevelop.XmlEditor/schemas
+schema_DATA = $(DATA_FILES)
 
 CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb $(DATA_FILE_BUILD)
 EXTRA_DIST = $(FILES) $(RES) $(DATA_FILES)
